fixed some alignment issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -510,7 +510,7 @@ body {
 	content: "";
 	display: block;
 	position: relative;
-	top: -28px;
+	top: -20px;
 	height: 1px;
 	margin-left: 20px;
 	background-color: dimgray;
